--- a/index.html
+++ b/index.html
@@ -137,15 +137,18 @@
             <div class="team-members">
                  <div class="member">
                 <img src="images/member1.jpeg" alt="Team Member 1">
-                <p>Krishna Teja Elineni - Position: Leader,Developer</p>
+                <p>Krishna Teja Elineni</p>
+                     <p>Position: Leader,Developer</p>
                  </div>
                  <div class="member">
                 <img src="images/member2.jpeg" alt="Team Member 2">
-                <p>Harsha Vardhini Daram - Position: Project Manager</p>
+                <p>Harsha Vardhini Daram</p>
+                     <p>Position: Project Manager</p>
                  </div>
                  <div class="member">
                 <img src="images/member3.jpeg" alt="Team Member 3">
-                <p>Kumar Datta Tummala - Position: Designer</p>
+                <p>Kumar Datta Tummala</p>
+                <p>Position: Designer</p>
                  </div>
             </div>
         </div>
