--- a/index.html
+++ b/index.html
@@ -136,17 +136,17 @@
             <h3>Our Team</h3>
             <div class="team-members">
                  <div class="member">
-                <img src="images/member1.jpeg" alt="Team Member 1">
+                <img src="images/krishna.jpg" alt="Team Member 1">
                 <p>Krishna Teja Elineni</p>
                      <p>Position: Leader,Developer</p>
                  </div>
                  <div class="member">
-                <img src="images/member2.jpeg" alt="Team Member 2">
+                <img src="images/harsha.jpeg" alt="Team Member 2">
                 <p>Harsha Vardhini Daram</p>
                      <p>Position: Project Manager</p>
                  </div>
                  <div class="member">
-                <img src="images/member3.jpeg" alt="Team Member 3">
+                <img src="images/koushik.heic" alt="Team Member 3">
                 <p>Kumar Datta Tummala</p>
                 <p>Position: Designer</p>
                  </div>
