--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
             display: block;
         }
 
+        .detail {
+            display: flex;
+        }
+
         .team-members img {
             margin: 0 10px; /* Add some space between the images */
             max-width: 100px; /* Set the maximum width of the images */
@@ -157,6 +161,7 @@
     <div id="contact" class="parallax" style="background-image: url('images/c.jpg');">
         <div class="content">
             <h2>Contact Us</h2>
+            <div class="detail">
             <div>
             <p>Team Leader</p>
             <p>Krishna Teja Elineni</p>
@@ -174,6 +179,7 @@
             <p>Kumar Datta Tummala</p>
             <p>Email: <a href="mailto:ktummala@islander.tamucc.edu">ktummala@islander.tamucc.edu</a></p>
             <p>Phone: <a href="tel:+12792346618">+1 (279) 234-6618</a></p>
+            </div>
             </div>
         </div>
     </div>
