--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
             display: flex;
         }
 
+        .content-details {
+            margin-right: 15px;
+        }
+
         .team-members img {
             margin: 0 10px; /* Add some space between the images */
             max-width: 100px; /* Set the maximum width of the images */
@@ -163,19 +167,19 @@
         <div class="content">
             <h2>Contact Us</h2>
             <div class="detail">
-            <div>
+            <div class="content-details">
             <p>Team Leader</p>
             <p>Krishna Teja Elineni</p>
             <p>Email: <a href="mailto:kelineni@islander.tamucc.edu">kelineni@islander.tamucc.edu</a></p>
             <p>Phone: <a href="tel:+13617375093">+1 (361) 737-5053</a></p>
             </div>
-            <div>
+            <div class="content-details">
             <p>Team Member 1</p>
             <p>Harsha Vardhini Daram</p>
             <p>Email: <a href="mailto:hdaram@islander.tamucc.edu">hdaram@islander.tamucc.edu</a></p>
             <p>Phone: <a href="tel:+13617429249">+1 (361) 742-9249</a></p>
             </div>
-            <div>
+            <div class="content-details">
             <p>Team Member 2</p>
             <p>Kumar Datta Tummala</p>
             <p>Email: <a href="mailto:ktummala@islander.tamucc.edu">ktummala@islander.tamucc.edu</a></p>
