--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                      <p>Position: Project Manager</p>
                  </div>
                  <div class="member">
-                <img src="images/koushik.heic" alt="Team Member 3">
+                <img src="images/koushik.jpg" alt="Team Member 3">
                 <p>Kumar Datta Tummala</p>
                 <p>Position: Designer</p>
                  </div>
