--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
         .team-members img {
             margin: 0 10px; /* Add some space between the images */
-            max-width: 100px; /* Set the maximum width of the images */
-            height: auto;
+            max-width: 180px; /* Set the maximum width of the images */
+            height: 220px;
         }
     </style>
 </head>
