--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             margin-top: 20px; /* Adjust this value as needed */
         }
 
-        .members {
+        .member {
             display: block;
             margin-right: 20px;
         }
