--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div id="checkpoints" class="parallax" style="background-image: url('images/checkpoint.jpg');" color: White;>
         <div class="content">
             <h2>Checkpoints</h2>
-            <p>Project Proposal <a href="Docs/AI-Driven_VR_Experiences_for_Therapy_and_Mental_Treatment[1]-2.docx">here</a>.</p>
+            <p>Project Proposal <a href="Docs/project_proposal.pdf">here</a>.</p>
             <p>Project Checkpoint 1..... Will be available on 03/26/2024</p>
             <p>Project Checkpoint 2..... Will be available on 04/16/2024</p>
             <p>Final Project Report..... Will be available on 05/07/2024</p>
