--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <div id="home" class="parallax" style="background-image: url('images/fb.jpg');">
         <div class="content">
-            <h1>Virtual Reality Therapy: AI-Driven VR Experiences for Therapy and Mental Treatment</h1>
+            <h1>Edith - AI Personal Assistant</h1>
             <h3>Short introduction to the project...</h3>
             <p>The central objective of this initiative is to develop immersive virtual reality (VR) environments utilizing ai algorithms to deliver personalized therapy experiences. These environments are meticulously crafted to target specific mental health conditions such as anxiety, depression, PTSD, phobias, and more. Through rigorous research and development, our goal is to create a comprehensive library of VR environments infused with evidence-based therapeutic techniques. The incorporation of ai allows for real-time adaptation of VR experiences based on user data, ensuring a personalized and effective treatment approach for each individual.</p>
         </div>
