--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             padding: 0;
             overflow-x: hidden;
         }
+        .header {
+            background-color: black;
+            color: white;
+        }
         
         .parallax {
             background-attachment: fixed;
@@ -122,7 +126,7 @@
     </style>
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="#" class="logo">AI PROJECT</a>
         <div class="navigation">
             <a href="#home">Home</a>
