--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">AI PROJECT</a>
+        <div>
+            <a href="#" class="logo">AI PROJECT</a>
+        </div>
         <div class="navigation">
             <a href="#home">Home</a>
             <a href="#about">About</a>
@@ -207,7 +209,6 @@
     
 
     <script>
-        
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
