--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
         }
         .logo { 
             text-align: center;
+            color: white;
             font-size: 30px;
             font-weight: 700;
             text-decoration: none;
         }
         .navigation {
             display: flex;
+            color: white;
             align-items: center;
             justify-content: center;
         }
