--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         .header {
             background-color: black;
             color: white;
+            display: flex;
         }
         
         .parallax {
@@ -43,6 +44,7 @@
         }
         .navigation {
             display: flex;
+            
             color: white;
             align-items: center;
             justify-content: center;
