--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             text-decoration: none;
         }
         .navigation {
+            margin-right: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
