--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
             background-color: black;
             color: white;
             display: flex;
+            height: 50px;
         }
-        
+        .project {
+            align-items: center;
+            justify-content: center;
+        }
         .parallax {
             background-attachment: fixed;
             background-position: center;
@@ -129,7 +133,7 @@
 </head>
 <body>
     <header class="header">
-        <div>
+        <div class="project"> 
             <a href="#" class="logo">AI PROJECT</a>
         </div>
         <div class="navigation">
