--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             margin-right: 20px;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: end;
         }
         .navigation a {
             color: white;
