--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
             justify-content: center;
         }
         .parallax {
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
             height: 100vh;
             display: flex;
             align-items: center;
@@ -144,7 +140,10 @@
         </div>
     </header>
 
-    <div id="home" class="parallax" style="background-image: url('images/fb.jpg');">
+    <div id="home" class="parallax">
+        <div class="homeimage">
+            
+        </div>
         <div class="content">
             <h1>Edith - AI Personal Assistant</h1>
             <h3>Short introduction to the project...</h3>
