--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         }
         .header {
             background-color: black;
-            color: white;
-            display: flex;
-            height: 50px;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 50px;
         }
         .project {
             align-items: center;
