--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     height: 50px;
         }
         .project {
-            align-items: center;
-            justify-content: center;
+            display: flex;
+    align-items: center;
+    justify-content: center;
         }
         .parallax {
             height: 100vh;
