--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
             display: block;
             width: 0;
             height: 2px;
-            background: #E76F51; 
             transition: width 0.3s;
         }
         .navigation a:hover::after {
@@ -145,7 +144,7 @@
 
     <div id="home" class="parallax">
         <div class="homeimage">
-            
+            <img src="images/chatbot.webp" alt="AI Personal Assistant">
         </div>
         <div class="content">
             <h1>Edith - AI Personal Assistant</h1>
