--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
             max-width: 180px; /* Set the maximum width of the images */
             height: 220px;
         }
+        .homeimage img {
+            max-width: 380px; /* Set the maximum width of the images */
+            height: 420px;
+        }
     </style>
 </head>
 <body>
