--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         h1 {
             font-size: 48px;
             color: gold;
-            background-color: rgba(0, 0, 0, 0.5); 
+            background-color: rgb(247 119 34 / 50%); 
             padding: 20px; 
         }
         .content {
