--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 50px;
+    height: 70px;
         }
         .project {
             display: flex;
@@ -71,7 +71,7 @@
         }
         h1 {
             font-size: 48px;
-            color: gold;
+            color: black;
             background-color: rgb(247 119 34 / 50%); 
             padding: 20px; 
         }
@@ -152,8 +152,8 @@
         </div>
         <div class="content">
             <h1>Edith - AI Personal Assistant</h1>
-            <h3>Short introduction to the project...</h3>
-            <p></p>
+            <h3>Abstract</h3>
+            <p>In today's fast-paced educational environment, students encounter a myriad of challenges as they strive to balance their academic duties with personal commitments. These challenges can often lead to stress and a decrease in productivity, impacting their overall well-being and success in their academic pursuits. To mitigate these issues, the development of Edith AI Personal Assistant is proposed as an innovative solution. This digital platform, powered by cutting-edge artificial intelligence (AI) technology, is designed with the specific intention of providing bespoke support that caters to both the academic and lifestyle needs of students. Edith AI aims to transcend the capabilities of traditional academic support tools by offering a more personalized and intuitive approach to managing academic workloads and personal obligations. Through its AI-driven features, the platform will analyze individual user data, such as study habits, schedules, and interests, to deliver customized advice, resources, and recommendations. This could range from study tips and time management strategies to suggestions for balancing personal life and academic commitments effectively. Furthermore, Edith AI's personalized support system is envisioned to adapt to the evolving needs of students over time, ensuring relevance and effectiveness throughout their academic journey. By leveraging technologies such as natural language processing and machine learning, Edith AI promises a user-friendly experience that simplifies access to academic resources, improves organization, and boosts productivity. The keywords associated with this initiative – Edith AI, personal assistant, artificial intelligence, academic support, and student success – encapsulate the essence of the project's ambition. Edith AI is not just a tool but a companion designed to empower students to navigate the complexities of modern education with confidence, enhancing their academic performance and overall quality of life.</p>
         </div>
     </div>
 
