--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
     </div>
 
-    <div id="about" class="parallax" style="background-image: url('images/about.jpg');">
+    <div id="about" class="parallax">
         <div class="content">
             <h2>About Us</h2>
             <h3>Our Team</h3>
@@ -181,7 +181,7 @@
         </div>
     </div>
 
-    <div id="contact" class="parallax" style="background-image: url('images/c.jpg');">
+    <div id="contact" class="parallax">
         <div class="content">
             <h2>Contact Us</h2>
             <div class="detail">
@@ -207,7 +207,7 @@
         </div>
     </div>
 
-    <div id="checkpoints" class="parallax" style="background-image: url('images/checkpoint.jpg');" color: White;>
+    <div id="checkpoints" class="parallax">
         <div class="content">
             <h2>Checkpoints</h2>
             <p>Project Proposal <a href="Docs/project_proposal.pdf">here</a>.</p>
