--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             padding: 20px;
             text-align: center;
             color: black; 
+            font-size: medium;
         }
         img {
             max-width: 90%;
