--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             text-align: center;
             color: white;
             font-size: 30px;
+            margin-left: 20px;
             font-weight: 700;
             text-decoration: none;
         }
@@ -129,8 +130,9 @@
             height: 220px;
         }
         .homeimage img {
-            max-width: 650px; /* Set the maximum width of the images */
+            max-width: 730px; /* Set the maximum width of the images */
             height: 630px;
+            margin-left: 20px;
         }
     </style>
 </head>
