--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     flex-direction: row;
     justify-content: space-between;
     height: 70px;
+            right: 0;
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    left: 0;
         }
         .project {
             display: flex;
