--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             justify-content: center;
             color: black; 
             font-size: 24px;
+            margin-top: 35px;
         }
         .parallax:nth-child(even) {
              
@@ -167,8 +168,7 @@
 
     <div id="about" class="parallax">
         <div class="content">
-            <h2>About Us</h2>
-            <h3>Our Team</h3>
+            <h1>Meet our Team</h1>
             <div class="team-members">
                  <div class="member">
                 <img src="images/krishna.jpg" alt="Team Member 1">
