--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         }
         .team-members {
             display: flex;
-            justify-content: center; /* Centers the images horizontally */
+            justify-content: space-between; /* Centers the images horizontally */
             align-items: center; /* Centers the images vertically */
             margin-top: 20px; /* Adjust this value as needed */
         }
