--- a/index.html
+++ b/index.html
@@ -172,18 +172,18 @@
             <div class="team-members">
                  <div class="member">
                 <img src="images/krishna.jpg" alt="Team Member 1">
-                <p>Krishna Teja Elineni</p>
-                     <p>Position: Leader,Developer</p>
+                <h2>Krishna Teja Elineni</h2>
+                     <h2>Position: Leader,Developer</h2>
                  </div>
                  <div class="member">
                 <img src="images/harsha.jpeg" alt="Team Member 2">
-                <p>Harsha Vardhini Daram</p>
-                     <p>Position: Project Manager</p>
+                <h2>Harsha Vardhini Daram</h2>
+                     <h2>Position: Project Manager</h2>
                  </div>
                  <div class="member">
                 <img src="images/koushik.jpg" alt="Team Member 3">
-                <p>Kumar Datta Tummala</p>
-                <p>Position: Designer</p>
+                <h2>Kumar Datta Tummala</h2>
+                <h2>Position: Designer</h2>
                  </div>
             </div>
         </div>
