--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
             height: 630px;
             margin-left: 20px;
         }
+        .project-update {
+            display: flex;
+            
+        }
     </style>
 </head>
 <body>
@@ -190,10 +194,12 @@
 <div id="checkpoints" class="parallax">
         <div class="content">
             <h1>Our Updates</h1>
+            <div class="project-update">
             <a href="Docs/project_proposal.pdf"><img src="images/proposal.webp" alt="Team Member 3"></a>
             <p>Project Checkpoint 1..... Will be available on 03/26/2024</p>
             <p>Project Checkpoint 2..... Will be available on 04/16/2024</p>
             <p>Final Project Report..... Will be available on 05/07/2024</p>
+            </div>
         </div>
     </div>
     
