--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
         <div class="content">
             <h1>Our Updates</h1>
             <div class="project-update">
-            <a href="Docs/project_proposal.pdf"><img src="images/proposal.webp" alt="Team Member 3"></a>
-            <p>Project Checkpoint 1..... Will be available on 03/26/2024</p>
-            <p>Project Checkpoint 2..... Will be available on 04/16/2024</p>
-            <p>Final Project Report..... Will be available on 05/07/2024</p>
+            <a href="Docs/project_proposal.pdf"><img src="images/proposal.webp" alt="Project proposal">Project proposal</a>
+            <a href="Docs/project_proposal.pdf"><img src="images/checkpoint1.webp" alt="Project Checkpoint 1">Project Checkpoint 1 is available</a>
+            <a href=""><img src="images/checkpoint2.webp" alt="Project Checkpoint 2">Project Checkpoint 2</a>
+            <a href=""><img src="images/proposal.webp" alt="Final Project Report">Final Project Report</a>
             </div>
         </div>
     </div>
