--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
         }
         .project-update {
             display: flex;
-            
+            img {
+                max-width: 30%;
+                height: auto;
+            }
         }
     </style>
 </head>
