--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
             <h1>Our Updates</h1>
             <div class="project-update">
             <a href="Docs/project_proposal.pdf"><img src="images/proposal.webp" alt="Project proposal">Project proposal</a>
-            <a href="Docs/project_proposal.pdf"><img src="images/checkpoint1.webp" alt="Project Checkpoint 1">Project Checkpoint 1 is available</a>
-            <a href=""><img src="images/checkpoint2.webp" alt="Project Checkpoint 2">Project Checkpoint 2</a>
+            <a href="Docs/project_proposal.pdf"><img src="images/checkpoint1.jpeg" alt="Project Checkpoint 1">Project Checkpoint 1 is available</a>
+            <a href=""><img src="images/checkpoint2.jpeg" alt="Project Checkpoint 2">Project Checkpoint 2</a>
             <a href=""><img src="images/proposal.webp" alt="Final Project Report">Final Project Report</a>
             </div>
         </div>
