--- a/index.html
+++ b/index.html
@@ -198,10 +198,21 @@
         <div class="content">
             <h1>Our Updates</h1>
             <div class="project-update">
-            <a href="Docs/project_proposal.pdf"><img src="images/proposal.webp" alt="Project proposal"></a><p>Project proposal</p>
-            <a href="Docs/project_proposal.pdf"><img src="images/checkpoint1.jpeg" alt="Project Checkpoint 1"></a><p>Project Checkpoint 1 is available</p>
-            <a href=""><img src="images/checkpoint2.jpeg" alt="Project Checkpoint 2"></a><p>Project Checkpoint 2</p>
-            <a href=""><img src="images/proposal.webp" alt="Final Project Report"></a><p>Final Project Report</p>
+            <a href="Docs/project_proposal.pdf"><img src="images/proposal.webp" alt="Project proposal"></a>
+                <p>Project proposal</p>
+            </div>
+            <div class="project-update">
+            <a href="Docs/project_proposal.pdf"><img src="images/checkpoint1.jpeg" alt="Project Checkpoint 1"></a>
+                <p>Project Checkpoint 1 is available</p>
+            </div>
+                <div class="project-update">
+            <a href=""><img src="images/checkpoint2.jpeg" alt="Project Checkpoint 2"></a>
+                <p>Project Checkpoint 2</p>
+                </div>
+                    <div class="project-update">
+            <a href=""><img src="images/proposal.webp" alt="Final Project Report"></a>
+                <p>Final Project Report</p>
+                    </div>
             </div>
         </div>
     </div>
