--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
         .project-update {
             display: flex;
             img {
-                max-width: 30%;
-                height: auto;
+                max-width: 180px;
+                height: 180px;
+                display: block;
             }
         }
     </style>
