--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 <div id="checkpoints" class="parallax">
         <div class="content">
             <h1>Our Updates</h1>
+            <div class="project">
             <div class="project-update">
             <a href="Docs/project_proposal.pdf"><img src="images/proposal.webp" alt="Project proposal"></a>
                 <p>Project proposal</p>
@@ -214,6 +215,7 @@
             <a href=""><img src="images/proposal.webp" alt="Final Project Report"></a>
                 <p>Final Project Report</p>
                     </div>
+            </div>
             </div>
         </div>
     </div>
