--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
             height: 630px;
             margin-left: 20px;
         }
+        .project {
+            display: flex;
+        }
         .project-update {
             display: block;
             img {
