--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         }
         .project-update {
             display: block;
+            margin-right: 20px;
             img {
                 max-width: 180px;
                 height: 180px;
