--- a/index.html
+++ b/index.html
@@ -138,12 +138,9 @@
             height: 630px;
             margin-left: 20px;
         }
-        .project {
-            display: flex;
-        }
+        
         .project-update {
-            display: block;
-            margin-right: 20px;
+            margin: 20px;
             img {
                 max-width: 180px;
                 height: 180px;
