--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
     
     <div id="contact" class="parallax">
         <div class="content">
-            <h2>Contact Us</h2>
+            <h1>Any Questions?</h1>
+            <h1>Contact Us</h1>
             <div class="detail">
             <div class="content-details">
             <p>Team Leader</p>
