--- a/index.html
+++ b/index.html
@@ -179,17 +179,20 @@
                  <div class="member">
                 <img src="images/krishna.jpg" alt="Team Member 1">
                 <h2>Krishna Teja Elineni</h2>
-                     <h2>Position: Leader,Developer</h2>
+                     <h2>Position: Team Lead</h2>
+                     <p>Machine Learning Engineer & Software Engineer</p>
                  </div>
                  <div class="member">
                 <img src="images/harsha.jpeg" alt="Team Member 2">
                 <h2>Harsha Vardhini Daram</h2>
                      <h2>Position: Project Manager</h2>
+                     <p>Product Managers & UX/UI Designers</p>
                  </div>
                  <div class="member">
                 <img src="images/koushik.jpg" alt="Team Member 3">
                 <h2>Kumar Datta Tummala</h2>
                 <h2>Position: Designer</h2>
+                     <p>Natural Language Processing (NLP) Engineers & User Researchers</p>
                  </div>
             </div>
         </div>
