--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
             <h1>Our Updates</h1>
             <div class="project">
             <div class="project-update">
-            <a href="Docs/project_proposal.pdf" target="_blank"><img src="images/proposal.webp" alt="Project proposal"></a>
+            <a href="proposal for edith.pdf" target="_blank"><img src="images/proposal.webp" alt="Project proposal"></a>
                 <p>Project proposal</p>
             </div>
             <div class="project-update">
-            <a href="Docs/project_proposal.pdf" target="_blank"><img src="images/checkpoint1.jpeg" alt="Project Checkpoint 1"></a>
+            <a href="Edith(checkpoint1).pdf" target="_blank"><img src="images/checkpoint1.jpeg" alt="Project Checkpoint 1"></a>
                 <p>Project Checkpoint 1 is available</p>
             </div>
                 <div class="project-update">
