--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <p>Project Checkpoint 2</p>
                 </div>
                     <div class="project-update">
-            <a href="" target="_blank"><img src="images/proposal.webp" alt="Final Project Report"></a>
+            <a href="" target="_blank"><img src="images/final_report.webp" alt="Final Project Report"></a>
                 <p>Final Project Report</p>
                     </div>
             
