--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <p>Project Checkpoint 1 is available</p>
             </div>
                 <div class="project-update">
-            <a href="" target="_blank"><img src="images/checkpoint2.jpeg" alt="Project Checkpoint 2"></a>
+            <a href="checkpoint2.pdf" target="_blank"><img src="images/checkpoint2.jpeg" alt="Project Checkpoint 2"></a>
                 <p>Project Checkpoint 2</p>
                 </div>
                     <div class="project-update">
